<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        style="@style/ImageViewStyle"
        android:id="@+id/itemImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_image"
        tools:ignore="ContentDescription" />
    <LinearLayout
        style="@style/BackGroundInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">
        <TextView
            style="@style/NameTextViewStyle"
            android:id="@+id/itemNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/item_name"/>

        <RatingBar
            style="@style/RatingBarStyle"
            android:id="@+id/itemRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="1"
            android:stepSize="0.1"/>

        <TextView
            style="@style/PriceTextViewStyle"
            android:id="@+id/itemPriceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:paddingTop="8dp" />
        <TextView
            style="@style/DueBackDateStyle"
            android:id="@+id/dueDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">


        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            tools:ignore="ButtonStyle" />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/borrowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrow"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</LinearLayout>
