<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".BorrowActivity">

    <TextView
        style="@style/DaysTextViewStyle"
        android:id="@+id/numberOfDaysTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:paddingTop="8dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/numberOfDaysSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="10"
        android:value="0" />

    <TextView
        android:id="@+id/calculatedPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:paddingTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            tools:ignore="ButtonStyle" />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
